# MCP-SandboxScan

./: .gitignore  README.md
mcp-sandboxscan/: Cargo.toml  main.rs
mcp-sandboxscan/case_studies/go-benign/: subject.toml
mcp-sandboxscan/case_studies/go-c2-beacon/: subject.toml
mcp-sandboxscan/case_studies/go-env-leak/: subject.toml
mcp-sandboxscan/case_studies/go-file-exfil/: subject.toml
mcp-sandboxscan/case_studies/go-mcp-c2-beacon/: subject.toml
mcp-sandboxscan/case_studies/go-mcp-echo/: subject.toml
mcp-sandboxscan/case_studies/go-mcp-env-leak/: subject.toml
mcp-sandboxscan/case_studies/go-mcp-upstream-hello/: subject.toml
mcp-sandboxscan/case_studies/python-benign/: subject.toml
mcp-sandboxscan/case_studies/python-env-leak/: subject.toml
mcp-sandboxscan/case_studies/python-fastmcp-c2-beacon/: subject.toml
mcp-sandboxscan/case_studies/python-fastmcp-echo/: subject.toml
mcp-sandboxscan/case_studies/python-fastmcp-env-leak/: subject.toml
mcp-sandboxscan/corpus/: repos-scan-ok-1781854580.json  repos.json
mcp-sandboxscan/demo/: run_demo.sh  run_microbench.sh  run_rust_python_matrix.sh  run_static_vs_dynamic.sh
mcp-sandboxscan/reports/: CORPUS_LATEST.txt  LATEST.txt  evasion.json
mcp-sandboxscan/scripts/: check-javy.sh  check-tinygo.sh  fetch-cpython-wasi.sh  fetch-fastmcp-examples.sh  fetch-go-sdk-examples.sh  fetch-typescript-sdk-examples.sh  github_corpus.py
mcp-sandboxscan/src/: lib.rs  main.rs  pipeline.rs
mcp-sandboxscan/src/adapter/: mod.rs  (+5 more)
mcp-sandboxscan/tests/: cli_demo.rs  dynamic_scan.rs  prompt_sink.rs  sandbox_basic.rs
(+305 files in other folders)
