[package]
name = "mcp-sandboxscan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"
wasi-common = "39.0.1"
cap-std = "4.0.0"
