[package]
name = "mcp-sandboxscan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

wasmtime = "45.0.0"
wasmtime-wasi = "45.0.0"
wasi-common = "45.0.0"
cap-std = "4.0.0"
toml="1.1.2+spec-1.1.0"